# aviutl2-extension-composer

./: .gitignore  Cargo.toml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tspconfig.yaml  uno.config.ts  vite.config.ts
crates/app/: Cargo.toml  build.rs  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: commands.rs  ext.rs  fetch.rs  installer.rs  lib.rs  models.rs  path_match.rs  store.rs  utils.rs
crates/models/: Cargo.toml  build.rs
crates/models/src/: lib.rs  schema_generated.rs
crates/models/src/snapshots/: aviutl2_extension_composer_models__tests__parsing_example_manifest.snap  aviutl2_extension_composer_models__tests__parsing_example_registry.snap
docs/: index.md  specification.md  specification.tsp
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/examples/: manifest.yml  registry.yml
docs/public/schema/: Manifest.json  Manifest.yaml  Registry.json  Registry.yaml
src/: App.vue  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  store.rs
src-tauri/src/models/: generated.rs  mod.rs
src-tauri/src/models/snapshots/: aviutl2_extension_composer_lib__models__tests__parsing_example_manifest.snap
src-tauri/src/snapshots/: aviutl2_extension_composer_lib__models__tests__parsing_example_manifest.snap  aviutl2_extension_composer_lib__models__tests__parsing_example_registry.snap
src/components/: BackButton.vue  CardSmallText.vue  Collapsible.vue  CommonInput.vue  CommonInputSideIcon.vue  ContentCard.vue  ContentDialog.vue  Dialog.vue  FileInput.vue  FilePathInput.vue  Footer.vue  GeneralDialog.vue  Header.vue  Icon.vue  IconButton.vue  IconLabelButton.vue  InstallPlanDialog.vue  InstallingDialog.vue  Loading.vue  LoadingDialog.vue  Markdown.vue  ProgressBar.vue  RegistryCard.vue  ScrollArea.vue  Select.vue  SingleDialog.vue  TextInput.vue  Toast.vue
src/lib/: asyncData.ts  debounce.ts  dialog.ts  error.ts  file.ts  ipc.ts  null.ts  types.ts  useAsync.ts  useCopy.ts  useMaybeLocalized.ts  useRegistry.ts  version.ts
src/lib/models/: Manifest.d.ts  Registry.d.ts
src/locales/: en.yml  ja.yml
src/plugins/: dialog.ts  i18n.ts  router.ts  toast.ts
src/styles/: style.scss
src/views/: CreateProfile.vue  DebugView.vue  Home.vue  ManageRegistry.vue  ProfileChooser.vue  ProfileEditor.vue
