[package]
name = "aviutl2-extension-composer"
version = "0.1.0"
description = "AviUtl2 Extension Composer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aviutl2_extension_composer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.99"
serde_json = "1"
tauri-build = { version = "2", features = [] }
typify = "0.4.3"
schemars = "0.8.22"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
log = "0.4.28"
tauri-plugin-log = "2"
fs-err = { version = "3.1.1", features = ["tokio"] }
url = { version = "2.5.7", features = ["serde"] }
lazy-regex = "3.4.1"
serde_yml = "0.0.12"
typify = "0.4.3"
regress = "0.10.4"
insta = "1.43.2"
cached = "0.56.0"
reqwest = "0.12.23"
scraper = "0.24.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
