[package]
name = "aviutl2-extension-composer"
version = "0.1.0"
description = "AviUtl2 Extension Composer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aviutl2_extension_composer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
anyhow = "1.0.99"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
aviutl2-extension-composer-models = { path = "../models" }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
log = "0.4.28"
tauri-plugin-log = "2"
fs-err = { version = "3.1.1", features = ["tokio"] }
lazy-regex = "3.4.1"
serde_yml.workspace = true
typify = "0.4.3"
url.workspace = true
cached = { version = "0.56.0", features = ["proc_macro", "async"] }
reqwest = "0.12.23"
scraper = "0.24.0"
either = "1.15.0"
tauri-plugin-shell = "2"
easy-ext = "1.0.2"
duplicate = "2.0.0"
base64 = "0.22.1"
thiserror = "2.0.16"
dunce = "1.0.5"
relative-path = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dev-dependencies]
rstest = "0.26.1"
