[package]
name = "aviutl2-extension-composer"
version = "0.1.0"
description = "AviUtl2 Extension Composer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aviutl2_extension_composer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

[dependencies]
anyhow = "1.0.99"
async-walkdir = "2.1.0"
async_zip = { version = "0.0.18", features = ["deflate", "tokio", "tokio-fs"] }
aviutl2-extension-composer-models = { path = "../models" }
base64 = "0.22.1"
cached = { version = "0.56.0", features = ["proc_macro", "async"] }
chrono = "0.4.42"
const_format = { version = "0.2.34", features = ["fmt"] }
dunce = "1.0.5"
duplicate = "2.0.0"
easy-ext = "1.0.2"
either = "1.15.0"
fs-err = { version = "3.1.1", features = ["tokio"] }
futures = "0.3.31"
lazy-regex = "3.4.1"
log = "0.4.28"
relative-path = "2.0.1"
reqwest = { version = "0.12.23", features = ["stream"] }
scraper = "0.24.0"
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tempfile = "3.23.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
typify = "0.4.3"
url.workspace = true
uuid = { version = "1.18.1", features = ["serde", "v7"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[build-dependencies]
anyhow = "1.0.99"
tauri-build = { version = "2", features = [] }

[dev-dependencies]
rstest = "0.26.1"
