[package]
name = "aviutl2-extension-composer-models"
version = "0.1.0"
edition = "2024"

[dependencies]
insta = "1.43.2"
regress = "0.10.4"
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
url.workspace = true

[build-dependencies]
anyhow = "1.0.99"
serde_json = "1"
typify = "0.4.3"
schemars = "0.8.22"
